k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudvitals-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudvitals-backend

  template:
    metadata:
      labels:
        app: cloudvitals-backend

    spec:
      containers:
        - name: backend
          image: ghcr.io/heyrevath/cloudvitals-backend:latest

          ports:
            - containerPort: 3001
