k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudvitals-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudvitals-frontend

  template:
    metadata:
      labels:
        app: cloudvitals-frontend

    spec:
      containers:
        - name: frontend
          image: ghcr.io/heyrevath/cloudvitals-frontend:latest

          ports:
            - containerPort: 5173
