k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudvitals-backend-service
spec:
  selector:
    app: cloudvitals-backend
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
