k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudvitals-frontend-service

spec:
  selector:
    app: cloudvitals-frontend

  ports:
    - port: 5173
      targetPort: 5173

  type: NodePort
