k8s/cloudvitals-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudvitals-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: cloudvitals.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudvitals-frontend-service
                port:
                  number: 5173
